# resizer

./: Cargo.toml  LICENSE  README.md  wasmcloud.toml
.github/workflows/: build.yml  release.yml
src/: lib.rs
